--- a/kadai_008.ipynb
+++ b/kadai_008.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0t_rczxJWV30",
-        "outputId": "5cc42ca2-6f38-4d35-9a98-84e3dc2e78f7"
+        "outputId": "c948acc0-0085-4ca3-be5f-ca8d6d0f15dd"
       },
       "outputs": [
         {
@@ -41,7 +41,9 @@
         "elif var % 3 == 0:\n",
         "     print(\"Fizz\")\n",
         "elif var % 5 == 0:\n",
-        "     print(\"Buzz\")"
+        "     print(\"Buzz\")\n",
+        "else :\n",
+        "     print(var)"
       ]
     }
   ]
