--- a/kadai_015.ipynb
+++ b/kadai_015.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AZLwlcZ9S4YA",
-        "outputId": "1509dc0d-a231-4e58-d267-4beb03600f5c"
+        "outputId": "bf0fa573-87b2-41a9-966a-00fd717f67e8"
       },
       "outputs": [
         {
@@ -35,19 +35,15 @@
       ],
       "source": [
         "class Human:\n",
-        "    def _Init_(self):\n",
-        "        self.name = \"\"\n",
-        "        self.age  = \"\"\n",
-        "    def set_Name_And_Age(self, name, age):\n",
+        "    # コンストラクタを定義する\n",
+        "    def __init__(self, name, age):\n",
         "        self.name = name\n",
-        "        self.age  = age\n",
+        "        self.age = age\n",
         "    def printinfo(self):\n",
         "        print(self.name, self.age)\n",
         "\n",
-        "human = Human()\n",
-        "human.set_Name_And_Age(\"阿部\",24)\n",
-        "\n",
-        "human.printinfo()"
+        "human = Human(\"阿部\",24)\n",
+        "human.printinfo()\n"
       ]
     }
   ]
