--- a/kadai_017.ipynb
+++ b/kadai_017.ipynb
@@ -16,24 +16,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 67,
       "metadata": {
         "id": "YZjQTOOvwUQm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2cb1b994-33a7-46c8-db54-3e23721c8393"
+        "outputId": "17e7f9d3-4d0f-46d3-f7aa-7b9990c2352c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Aさんは大人です\n",
-            "Bさんは大人です\n",
-            "Cさんは大人ではありません\n",
-            "Dさんは大人です\n",
-            "Eさんは大人ではありません\n"
+            "A縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺兔n",
+            "B縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺兔n",
+            "C縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺ｯ縺ゅｊ縺ｾ縺帙ｓ\n",
+            "D縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺兔n",
+            "E縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺ｯ縺ゅｊ縺ｾ縺帙ｓ\n"
           ]
         }
       ],
@@ -44,14 +44,18 @@
         "    self.age = age\n",
         "  def check_adult(self):\n",
         "    if self.age >= 20:\n",
-        "      print(f\"{self.name}は大人です\")\n",
+        "      print(f\"{self.name}縺ｯ螟ｧ莠ｺ縺ｧ縺兔")\n",
         "    else:\n",
-        "      print(f\"{self.name}は大人ではありません\")\n",
+        "      print(f\"{self.name}縺ｯ螟ｧ莠ｺ縺ｧ縺ｯ縺ゅｊ縺ｾ縺帙ｓ\")\n",
         "\n",
-        "people = {\"Aさん\":22,\"Bさん\":24,\"Cさん\":18,\"Dさん\":20,\"Eさん\":15}\n",
-        "for name, age in people.items():\n",
-        "  human = Human(name, age)\n",
-        "  human.check_adult()"
+        "people = {\"A縺輔ｓ\":22,\"B縺輔ｓ\":24,\"C縺輔ｓ\":18,\"D縺輔ｓ\":20,\"E縺輔ｓ\":15}\n",
+        "\n",
+        "a = []\n",
+        "for key, value in people.items():\n",
+        "  a.append(Human(key,value))\n",
+        "\n",
+        "for list in a:\n",
+        "  list.check_adult()\n"
       ]
     }
   ]
