--- a/kadai_017.ipynb
+++ b/kadai_017.ipynb
@@ -29,11 +29,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺兔n",
-            "B縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺兔n",
-            "C縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺ｯ縺ゅｊ縺ｾ縺帙ｓ\n",
-            "D縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺兔n",
-            "E縺輔ｓ縺ｯ螟ｧ莠ｺ縺ｧ縺ｯ縺ゅｊ縺ｾ縺帙ｓ\n"
+            "Aさんは大人です\n",
+            "Bさんは大人です\n",
+            "Cさんは大人ではありません\n",
+            "Dさんは大人です\n",
+            "Eさんは大人ではありません\n"
           ]
         }
       ],
@@ -44,11 +44,11 @@
         "    self.age = age\n",
         "  def check_adult(self):\n",
         "    if self.age >= 20:\n",
-        "      print(f\"{self.name}縺ｯ螟ｧ莠ｺ縺ｧ縺兔")\n",
+        "      print(f\"{self.name}は大人です\")\n",
         "    else:\n",
-        "      print(f\"{self.name}縺ｯ螟ｧ莠ｺ縺ｧ縺ｯ縺ゅｊ縺ｾ縺帙ｓ\")\n",
+        "      print(f\"{self.name}は大人ではありません\")\n",
         "\n",
-        "people = {\"A縺輔ｓ\":22,\"B縺輔ｓ\":24,\"C縺輔ｓ\":18,\"D縺輔ｓ\":20,\"E縺輔ｓ\":15}\n",
+        "people = {\"Aさん\":22,\"Bさん\":24,\"Cさん\":18,\"Dさん\":20,\"Eさん\":15}\n",
         "\n",
         "a = []\n",
         "for key, value in people.items():\n",
